--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,10 +7,13 @@ clone_folder: c:\gopath\src\github.com\ncw\rclone
 environment:
   GOPATH: c:\gopath
   CPATH: C:\Program Files (x86)\WinFsp\inc\fuse
-  PATH: C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw64\bin;c:\MinGW\bin;%PATH%
+  PATH: C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw64\bin;c:\MinGW\bin;%GOPATH%\bin;%PATH%
+  RCLONE_CONFIG_PASS:
+    secure: HbzxSy9zQ8NYWN9NNPf6ALQO9Q0mwRNqwehsLcOEHy0=
 
 install:
 - choco install winfsp -y
+- choco install zip -y
 
 build_script:
 - echo %PATH%
@@ -21,4 +24,8 @@ build_script:
 
 test_script:
 - copy c:\MinGW\bin\mingw32-make.exe c:\MinGW\bin\make.exe
-- make quicktest
+- make appveyor_beta
+
+#- make quicktest
+
+# FIXME the beta should be in deploy_script: after testing
